--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "author": "rps",
   "license": "ISC",
+  "engines": {
+    "node": "18.16.1"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.1"
   }
 }
